--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>in.neuw</groupId>
   <artifactId>aws-iam-roles-anywhere</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
@@ -25,7 +25,7 @@
   <scm>
     <connection>scm:git:git://github.com/neuw/aws-iam-roles-anywhere.git</connection>
     <developerConnection>scm:git:ssh://github.com:neuw/aws-iam-roles-anywhere.git</developerConnection>
-    <url>http://github.com/neuw/aws-iam-roles-anywhere/tree/master</url>
+    <url>http://github.com/neuw/aws-iam-roles-anywhere/tree/main</url>
   </scm>
 
   <developers>
@@ -39,11 +39,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <aws-sdk.version>2.40.12</aws-sdk.version>
-    <spring-boot.version>4.0.1</spring-boot.version>
+    <aws-sdk.version>2.41.14</aws-sdk.version>
+    <spring-boot.version>4.0.2</spring-boot.version>
     <java.version>17</java.version>
     <parent.version>${project.version}</parent.version>
-    <jackson-bom.version>3.0.3</jackson-bom.version>
+    <jackson-bom.version>3.0.4</jackson-bom.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <jacoco.version>0.8.10</jacoco.version>
     <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
@@ -145,7 +145,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9.1</version>
+        <version>3.12.0</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -183,7 +183,7 @@
         <extensions>true</extensions>
         <configuration>
           <autoPublish>true</autoPublish>
-          <deploymentName>deploy-${build.date}-${version}-${aws-sdk.version}-${spring-boot.version}-1</deploymentName>
+          <deploymentName>deploy-${build.date}-${project.version}-${aws-sdk.version}-${spring-boot.version}-1</deploymentName>
           <publishingServerId>central</publishingServerId>
           <skipPublishing>false</skipPublishing>
           <waitUntil>validated</waitUntil>
